llvm/test/tools/llubi/volatile_capture_address.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define ptr @provenance_only(ptr captures(provenance) %p) {
  ret ptr %p
}

@g = global i8 0

define void @main() {
  %g_provenance_only = call ptr @provenance_only(ptr @g)
  %res = load volatile i8, ptr %g_provenance_only
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Entering function: provenance_only
; CHECK-NEXT:   ptr %p = ptr 0x8 [@g]
; CHECK-NEXT:   ret ptr %p
; CHECK-NEXT: Exiting function: provenance_only
; CHECK-NEXT:   %g_provenance_only = call ptr @provenance_only(ptr @g) => ptr 0x8 [@g provenance]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %res = load volatile i8, ptr %g_provenance_only, align 1 at @main <stdin>:12
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
